css/global.css
@charset "utf-8";

@import url("http://fonts.googleapis.com/css?family=Asap");

/* OFTN Aller is a modified version of Aller with an empty set and a raised colon.
   Aller is copyright Dalton Maag Ltd, http://www.daltonmaag.com/ */
@font-face {
        font-family: "OFTN Aller";
        src: url("../fonts/OFTN-Aller-Bold.woff") format("woff");
        font-weight: bold;
        font-style: normal;
}
@font-face {
        font-family: "OFTN Aller";
        src: url("../fonts/OFTN-Aller.woff") format("woff");
        font-weight: normal;
        font-style: normal;
}

* {
	margin: 0;
	padding: 0;
}

body {
	background: #FFF none no-repeat fixed top left;
	background-image: -webkit-gradient(linear, 100% 0%, 100% 100%, from(#EEE), color-stop(25%, #FFF), color-stop(75%, #FFF), to(#EEE));
	background-image: -moz-linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
	background-image: linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
	font-family: Asap, Arial, Helvetica, sans-serif;
	font-size: 14px;
	line-height: 2em;
	font-weight: normal;
	color: #000;
	overflow-y: scroll;
	/* Removed due to chrome bug: text-rendering: optimizeLegibility;  */
}

a { color: black; /*#3A0075; */text-decoration: underline; }

h1 { font-size: 2em;    margin-bottom: .5em; }
h2 { font-size: 1.5em;  margin-bottom: .5em; }
h3 { font-size: 1.17em; margin-bottom: .5em; }
h4 { font-size: 1em;    margin-bottom: 1.12em; }
h5 { font-size: .83em;  margin-bottom: 1.5em; }
h6 { font-size: .75em;  margin-bottom: 1.67em; }
p, blockquote, ul, fieldset, form, ol, dl, dir, menu { margin-bottom: 1.12em; }
ol, ul, dir, menu, dd { margin-left: 40px }

dt {
	font-size: 1.2em;
	padding: .5em 0;
	/*border-top: 1px solid lightgrey; /*#3A0075;*/
}

#container {
	width: 720px;
	margin: 2em auto;
}

header {
	text-align: center;
	color: black;
	margin: 3em 0;
}

h1 {
	margin: 0;
	line-height: 1em;
}

h1.logo {
	font-size: 6em;
	font-weight: bold;
}

@media (max-width: 940px) {
	h1.logo {
		font-size: 5em;
	}
}

@media (max-width: 800px) {
	h1.logo {
		font-size: 4em;
	}
}

@media (max-width: 650px) {
	h1.logo {
		font-size: 3em;
	}
}

.tagline {
	text-align: center;
	position: relative;
	font-style: italic;
	padding: 0;
	margin: 0;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
}

.oftn {
	font-family: "OFTN Aller";
	font-weight: normal;
}
.oftn-strong {
	font-family: "OFTN Aller";
	font-weight: bold;
}

footer {
	color: #666;
	text-align: center;
}


footer ul {
	list-style: none;
	margin-top: .5em;
}

footer ul li {
	display: inline-block;
}

footer ul li:not(:first-child)::before {
	content: " - "
}

/*

{ This code is dedicated in memory of Eli Grey. }

.accordian-header::before {
	color: #808080;
	display: inline-block;
	-webkit-transition: all 1s ease-out;
	-moz-transition: all 1s ease-out;
	-o-transition: all 1s ease-out;
	transition: all 1s ease-out;
}

.accordian-header::before {
	content: "▼ ";
}

.accordian-header.closed::before {
	-moz-transform: rotate(-90deg);
	-webkit-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	-ms-transform: rotate(-90deg);
	transform: rotate(-90deg);
}

*/

.accordian-header::after {
	content: "[+]";
	float: right;
	font: .65em monospace;
	line-height: 26px;
}

.accordian-header.open::after {
	content: "[-]";
}

.accordian-header {
	background-color: #181818;
	margin-bottom: 1em;
	cursor: pointer;
	padding: 0.25em 0.5em;
	color: white;
}

.accordian-panel {
	overflow: hidden;
	padding: 0 0.5em;
}

.projects dd { margin: 0; }
.projects dd p { text-align: justify; }


/* Android doesn't render background-scroll: fixed very well, here is a hack. */
@media screen and (max-device-width: 480px) {
	body {
		background: #fdfdfd;
	}
}

@media only screen and (max-width: 720px), only screen and (max-device-width: 720px) {
	#container {
		width: 100%;
	}
	h1.logo {
		margin: 0;
	}
}

@media print {
	body {
		font-size: 12px;
	}
	#container {
		width: 100%;
	}
	.accordian-header {
		-webkit-print-color-adjust: exact;
	}
	.accordian-panel {
		display: block !important;
	}
}

